# uv-config

./: .gitignore  README.md  main.py  pyproject.toml
uv_config/: cli.py  core.py
